# etl_pipeline

./: .gitignore  README.md  pyproject.toml
config/: base.yml  development.yml
docs/: architecture.md  create tables_file.sql  data_dictionary.md  make_connections.sql
logs/: extract_logs.txt
notebooks/: Commands.txt
scripts/: run_pipeline.sh  setup.sh
src/my_etl_pipeline/load/: to_data_warehouse.py
src/openalex_etl/: main.py
src/openalex_etl/common/: helpers.py
src/openalex_etl/extract/: extract_from_source.py  from_source_api.py
src/openalex_etl/load/: to_data_warehouse.py
src/openalex_etl/transform/: Base_transformer_utils.py  clean_user_data.py
src/openalex_etl/utils/: helpers.py
src/openalex_etl/utils/utils_files/: authors_s3_files.json  concepts_s3_urls.json  funders_s3_urls.json  institutions_s3_urls.json  papers_s3_urls.json  sources_s3_urls.json
tests/: conftest.py
tests/integration/: test_full_pipeline.py
tests/unit/: test_extraction.py  test_transformations.py
