[project]
name = "openalex-etl"
version = "0.1.0"
description = "This project is build to extarct and clean and load the openalex finance papers metadata to database for usage and analysis"
authors = [
    {name = "Gowtham",email = "gowthamgoli02@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "pandas (>=2.3.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
